chat center added

--- a/package.json
+++ b/package.json
@@ -1,24 +1,64 @@
 {
-  "name": "agent-with-nextjs",
+  "name": "ai-agent-assistant-openai-realtime-console",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "zip": "zip -r realtime-api-console.zip . -x 'node_modules' 'node_modules/*' 'node_modules/**' '.git' '.git/*' '.git/**' '.DS_Store' '*/.DS_Store' 'package-lock.json' '*.zip' '*.tar.gz' '*.tar' '.env'",
+    "relay": "nodemon ./relay-server/index.js"
   },
   "dependencies": {
+    "@auth/core": "^0.37.4",
+    "@auth/nextjs": "^0.0.0-380f8d56",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@types/socket.io-client": "^1.4.36",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.13.5",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.468.0",
+    "next": "15.1.0",
+    "next-auth": "^4.24.11",
+    "package-name": "^0.1.0",
+    "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "react-feather": "^2.0.10",
+    "react-leaflet": "^4.2.1",
+    "recharts": "^2.14.1",
+    "sass": "^1.82.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^4.2.4",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "nodemon": "^3.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
